[package]
name = "whosdom"
authors = ["Sivert V. Sæther <gmail@sivert.pw>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
whois-rust = { version = "1.5.1", features = ["tokio"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
clap = { version = "4.1.1", features = ["derive"] }
serde_json = "1.0.91"
env_logger = "0.10.0"
reqwest = "0.11.14"
log = "0.4.17"
